Fix code coverage build (merge main -> ce/main @ 95007)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 95049]